--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.0.1"
+    "vue": "^2.0.1",
+    "vue-resource": "^0.7.0",
+    "vue-router": "^0.7.12"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
